# Summarizer

./: README.md  ruff.toml
.devcontainer/: devcontainer.json
backend/http/: .env.example  db.sqlite  go.mod  go.sum  main.go
backend/http/bot/: bot.go
backend/http/config/: bot.go  database.go  worker_nodes.go
backend/http/middleware/: auth.go
backend/http/models/: models.go
backend/http/resources/: database.go  worker_nodes.go
backend/http/routes/: auth_handler.go  chat_handler.go
backend/http/services/: auth_handler_flow_test.go  auth_service.go  auth_service_test.go  chat_handler_flow_test.go  chat_service.go  chat_service_test.go  integration_helpers_test.go  test_helpers_test.go
backend/http/templates/: demo.tmpl
backend/worker/: .env.example  pyproject.toml
backend/worker/protos/: worker.proto
backend/worker/src/worker/: __main__.py  server.py
backend/worker/src/worker/di/: __init__.py  services.py
backend/worker/src/worker/impl/services/: __init__.py  summarizer.py
backend/worker/src/worker/services/: __init__.py  summarizer.py
docs/: 1_Концепция_проекта.docx  2_Структура_проекта.docx  3_Функциональная_спецификация.docx  4_Спецификации_и_сценарии_тестов.docx
frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/components/: HomeSidebar.vue
frontend/src/models/: index.ts
frontend/src/router/: index.ts
frontend/src/services/: auth.ts  chat.ts
scripts/: generate_protos.sh
(+8 files in other folders)
